Horizontal overflow fixed. The cause was .row in Bootstrap 4.

--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -6,3 +6,9 @@
     margin: auto;
 
 }
+
+/*To avoid horizontal overflow with row, so the scroll bar appears.*/
+.row {
+    margin: 0;
+    padding: 0
+}
